--- a/DirectX_Tutorials/DirectX_Tutorials/DirectX_Tutorials.vcproj
+++ b/DirectX_Tutorials/DirectX_Tutorials/DirectX_Tutorials.vcproj
@@ -171,6 +171,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\D3DClass.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\GraphicsClass.cpp"
 				>
 			</File>
@@ -212,6 +216,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\D3DClass.h"
+				>
+			</File>
 			<File
 				RelativePath=".\GraphicsClass.h"
 				>
